--- a/static/index.css
+++ b/static/index.css
@@ -19,7 +19,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 10px 40px;
-    margin-bottom: 100px;
+    margin-bottom: 20px;
 }
 .logo {
     font-size: 22px;
@@ -54,52 +54,48 @@ nav {
     background-color: #45a049;
 }
 
-body {
-    margin: 0;
-    background: #111;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
-.slider {
-    width: 800px;
-    height: 400px;
-    position: relative;
-    overflow: hidden;
+.slider{
+    background-image: url("./images/slider1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 450px;
+    width: 900px;
     border-radius: 10px;
-}
-
-.slides {
+    margin: 0 auto;
     display: flex;
-    width: 500%; /* 5 images */
-    height: 100%;
-    transition: transform 0.6s ease;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
 }
 
-.slide {
+
+.sliderImg {
     width: 100%;
     height: 100%;
-    object-fit: cover;
 }
 
 /* Buttons */
 .prev, .next {
-    position: absolute;
-    top: 50%;
     transform: translateY(-50%);
-    background: rgba(255, 255, 255, 0.6);
+    background: rgba(255, 255, 255, 0.1);
+    color: rgba(0, 0, 0, 0.1);;
     border: none;
     padding: 12px 18px;
-    cursor: pointer;
     font-size: 25px;
     border-radius: 5px;
+    height: 100px;
+    width: 100px;
 }
 
-.prev { left: 10px; }
-.next { right: 10px; }
 
 .prev:hover, .next:hover {
     background: #fff;
+}
+
+.btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    width: 100px;
 }
