--- a/static/form.css
+++ b/static/form.css
@@ -60,10 +60,11 @@ nav {
 }
 
 
+
 form {
     max-width: 700px;
     margin: auto;
-    background: white;
+    background-color: rgba(250, 250, 250, 0.1);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -71,6 +72,7 @@ form {
 
 h2 {
     text-align: center;
+    color: rgba(0, 0, 0, 0.4);
 }
 
 label {
@@ -85,6 +87,7 @@ input, textarea, select {
     margin-top: 5px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    background-color: rgba(250, 250, 250, 0.1);
 }
 
 button {
