--- a/static/index.css
+++ b/static/index.css
@@ -58,14 +58,17 @@ nav {
     background-image: url("./images/slider1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    height: 450px;
-    width: 900px;
     border-radius: 10px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    min-width: 400px;
+    max-width: 900px;
+    min-height: 180px;
+    max-height: 450px;
+    height: 450px;
 }
 
 
